--- a/index.html
+++ b/index.html
@@ -5,8 +5,230 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> panda commerce</title>
+    <!---------- bootstrap css stylesheet ---------->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
-    
+    <!---------- header section start ---------->
+    <header>
+    <!---------- navbar start ---------->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="./images/logo.png"  class="d-inline-block align-top" alt="">
+              </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Backpack</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Subscribe</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!---------- navbar end ---------->
+    <!---------- carousel section start ---------->
+      <section class="container my-5">
+        <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+            <div class="carousel-inner bg-info bg-gradient rounded"> 
+                <!---------- carousel item section one start ---------->              
+                <div class="carousel-item active">
+                    <div class="row align-items-center p-5">
+                        <div class="col-md-12 col-lg-7">
+                            <h1>Cool Dude Headphone</h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                            <h1 class="price">$1200</h1>
+                        <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                        <div class="col-md-12 col-lg-5">
+                            <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <!---------- carousel item section one end ---------->
+                  <!---------- carousel item section two start ---------->
+              <div class="carousel-item">
+                <div class="row align-items-center p-5">
+                    <div class="col-md-12 col-lg-7">
+                        <h1>Cool Dude Headphone</h1>
+                        <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                        <h1 class="price">$1200</h1>
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                    <div class="col-md-12 col-lg-5">
+                        <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <!---------- carousel item section two end ---------->
+              <!---------- carousel item section three start ---------->
+              <div class="carousel-item">
+                <div class="row align-items-center p-5">
+                    <div class="col-md-12 col-lg-7 align-items-center">
+                        <h1>Cool Dude Headphone</h1>
+                        <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                        <h1 class="price">$1200</h1>
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                    <div class="col-md-12 col-lg-5">
+                        <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <!---------- carousel item section three end ---------->
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </section>
+            <!---------- carousel section end ---------->
+    </header>
+    <!---------- header section end ---------->
+    <!---------- main section start ---------->
+    <main>
+        <!---------- highligh section start ---------->
+        <section class=" container my-5">
+                <div class="row g-5">
+                  <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-between rounded-3 p-3 border bg-light">
+                        <h1>Watch</h1>
+                        <img src="./images/categories/watch.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-between rounded-3 p-3 border bg-light">
+                        <h1>Bag</h1>
+                        <img src="./images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="d-flex align-items-center justify-content-between rounded-3 p-3 border bg-light">
+                        <h1>Shoes</h1>
+                        <img src="./images/categories/shoes.png" alt="">
+                    </div>
+                  </div>
+                </div>
+        </section>
+        <!---------- highligh section end ---------->
+        <!------------ Shoes Card section start ------------>
+        <section class="container my-5">
+            <h3>Shoes</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col col-md-6 col-lg-4">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h3 class="price">$120</h3>
+                        <button class="btn btn-warning">Buy Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h3 class="price">$320</h3>
+                        <button class="btn btn-warning">Buy Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h3 class="price">$350</h3>
+                        <button class="btn btn-warning">Buy Now >></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!------------ Shoes Card section start ------------>
+        <!------------ Bag Card section start ------------>
+        <section class="container my-5">
+            <h3>Backpack</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col col-md-6 col-lg-4">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Bag</h5>
+                      <h3 class="price">$350</h3>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                         <button class="btn btn-warning">Buy Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Bag</h5>
+                      <h3 class="price">$350</h3>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      <button class="btn btn-warning">Buy Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col col-md-6 col-lg-4">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black Bag</h5>
+                      <h3 class="price">$350</h3>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      <button class="btn btn-warning">Buy Now >></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!------------ bag Card section start ------------>
+        <!------------ subscribe section start ------------>
+        <section style="height: 300px;" class="container my-5 d-flex justify-content-center align-items-center  bg-success rounded-3">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+            <p>Get updates on sales, specials and more</p>
+            <input type="email" name="" id="" pattern="inter your email">
+            <br>
+            <button class="btn btn-warning">SUBMIT</button>
+            </div>
+        </section>
+        <!------------ subscribe section end ------------>
+    </main>
+    <!---------- main section end ---------->
+    <!---------- footer section start ---------->
+    <footer class="mt-5 text-center">
+        <p ><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
+    <!---------- footer section end ---------->
+
+
+    <!---------- bootstrap js script ---------->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
